# all-is-cubes

./: .gitattributes  .gitignore  .tm_properties  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  about.hbs  about.toml  bacon.toml  clippy.toml  deny.toml  index.html  package.json  rust-toolchain.toml  rustfmt.toml  third-party-licenses.html  webpack.config.js
.cargo/: config  (+2 more)
all-is-cubes/: Cargo.toml  README.md  build.rs
all-is-cubes-base/: Cargo.toml  README.md
all-is-cubes-base/src/: lib.rs  math.rs  raycast.rs  resolution.rs  serde-warning.md  time.rs  util.rs
all-is-cubes-base/src/math/: aab.rs  axis.rs  color.rs  coord.rs  cube.rs  face.rs  grid_aab.rs  grid_iter.rs  lines.rs  matrix.rs  octant.rs  restricted_number.rs  rigid.rs  rotation.rs  serde_impls.rs  vol.rs
all-is-cubes-base/src/raycast/: axis_aligned.rs  ray.rs  tests.rs
all-is-cubes-base/src/util/: custom_format.rs  log.rs  multi_failure.rs
all-is-cubes-client/: Cargo.toml  package-lock.json  package.json  webpack.config.js
all-is-cubes-client/js/: bootstrap.js  gui.js
all-is-cubes-client/src/: gameapp.rs  glrender.rs  js_bindings.rs  lib.rs  wasmglue.rs  web_glue.rs
all-is-cubes-client/src/shaders/: fragment.glsl  vertex-block.glsl  vertex-common.glsl
all-is-cubes-client/static/: style.css
all-is-cubes-content/: Cargo.toml  README.md
all-is-cubes-content/benches/: gen.rs  gen_bench.rs
all-is-cubes-content/src/: alg.rs  animation.rs  atrium.rs  blocks.rs  city.rs  clouds.rs  demo.rs  dungeon.rs  exhibits.rs  fractal.rs  framework.rs  islands.rs  landscape.rs  lib.rs  load_block.rs  logo.rs  menu.rs  noise.rs  pipe.rs  template.rs  tree.rs
all-is-cubes-desktop/: .gitignore  Cargo.toml  README.md  test-record-lighting-bench.vox
all-is-cubes-desktop/src/: aic_glfw.rs  aic_winit.rs  audio.rs  command_options.rs  config_files.rs  data_files.rs  glue.rs  lib.rs  logging.rs  main.rs  record.rs  session.rs  startup.rs  terminal.rs  universe_source.rs  winit.rs
all-is-cubes-desktop/tests/: end-to-end.rs  gltf-validation.rs
all-is-cubes-gpu/: Cargo.toml  README.md
all-is-cubes-gpu/benches/: wgpu.rs  wgpu_bench.rs
all-is-cubes-gpu/src/: block_texture.rs  bloom.rs  camera.rs  common.rs  everything.rs  frame_texture.rs  glrender.rs  glue.rs  headless.rs  in_luminance.rs  in_wgpu.rs  init.rs  lib.rs  light_texture.rs  mip_ping.rs  pipelines.rs  poll.rs  postprocess.rs  queries.rs  raytrace_to_texture.rs  rerun_image.rs  shader_testing.rs  shaders.rs  shading.rs  skybox.rs  space.rs  surface.rs  text.rs  types.rs  vertex.rs
all-is-cubes-gpu/tests/: gpu-test.rs  shader_tests.rs
all-is-cubes-mesh/: Cargo.toml  README.md
all-is-cubes-mesh/benches/: mesh.rs  mesh_bench.rs
all-is-cubes-mesh/examples/: visualize-block-mesh.rs
all-is-cubes-mesh/src/: aabb.rs  bitset.rs  block_mesh.rs  block_vertex.rs  cache.rs  chunked_mesh.rs  depth_sorting.rs  dynamic.rs  heap.rs  index_vec.rs  lib.rs  options.rs  planar.rs  space_mesh.rs  testing.rs  tests.rs  texalloc.rs  texture.rs  vertex.rs
all-is-cubes-port/: Cargo.toml  README.md
all-is-cubes-port/src/: export.rs  file.rs  gltf.rs  import.rs  lib.rs  mv.rs  native.rs  stl.rs  tests.rs  util.rs
all-is-cubes-render/: Cargo.toml  README.md
all-is-cubes-render/benches/: raytrace.rs
all-is-cubes-render/src/: flaws.rs  headless.rs  lib.rs
all-is-cubes-server/: Cargo.toml  README.md  build.rs
all-is-cubes-server/src/: client_static.rs  console.rs  embedded_client.rs  lib.rs  webserver.rs
all-is-cubes-server/tests/: http.rs  test-http.rs
all-is-cubes-ui/: Cargo.toml  README.md
all-is-cubes-ui/src/: editor.rs  inv_watch.rs  lib.rs  logo.rs  settings.rs  ui_content.rs  vui.rs
all-is-cubes-wasm/: Cargo.toml  clippy.toml  deny.toml  package-lock.json  package.json  webpack.config.js
all-is-cubes-wasm/.cargo/: config.toml
all-is-cubes-wasm/js/: bootstrap.js  gui.js  index.js
all-is-cubes-wasm/src/: audio.rs  block_texture.rs  gameapp.rs  glrender.rs  init.rs  js_bindings.rs  lib.rs  settings.rs  test_render.rs  types.rs  url_params.rs  web_glue.rs  web_session.rs
all-is-cubes-wasm/static/: bootstrap.js  bootstrap_nonmod.js  index.html  style.css
all-is-cubes-wasm/tests/: js_bindings_test.rs  render.rs
all-is-cubes/benches/: block.rs  block_bench.rs  chunk.rs  chunk_bench.rs  light.rs  lighting.rs  lighting_bench.rs  mesh_bench.rs  raycast.rs  raycast_bench.rs  raytrace.rs  raytrace_bench.rs  save.rs  save_bench.rs  space.rs  space_bench.rs  triangulator_bench.rs
all-is-cubes/examples/: light-tree.rs  visualize-raycast.rs
all-is-cubes/fuzz/: Cargo.toml
all-is-cubes/src/: apps.rs  behavior.rs  block.rs  blockgen.rs  camera.rs  character.rs  chunking.rs  content.rs  demo_content.rs  drawing.rs  fluff.rs  intalloc.rs  inv.rs  inventory.rs  lib.rs  lighting.rs  linking.rs  listen.rs  lum.rs  math.rs  mesh.rs  op.rs  physics.rs  raycast.rs  raytracer.rs  raytracer_components.rs  rerun_glue.rs  rerun_glue_disabled.rs  save.rs  space.rs  tag.rs  time.rs  tools.rs  transaction.rs  transactions.rs  triangulator.rs  universe.rs  util.rs  vui.rs  worldgen.rs
all-is-cubes/tests/: alloc.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_block_eval.rs  fuzz_import.rs  fuzz_mesh.rs  fuzz_octree.rs  fuzz_physics.rs  fuzz_raycast.rs  fuzz_triangulator.rs  fuzz_universe.rs
minvers-hack/: Cargo.toml
test-aic/: Cargo.toml
test-mesh/: Cargo.toml
test-mesh/benches/: mesh.rs
test-mesh/examples/: visualize-block-mesh.rs
test-mesh/tests/: alloc.rs
test-renderers/: Cargo.toml  README.md
test-renderers/cases/: Cargo.toml
test-renderers/dylib/: Cargo.toml
test-renderers/runner/: Cargo.toml
test-renderers/src/: diff.rs  harness.rs  histogram.rs  image_files.rs  lib.rs  render.rs  report.css  report.rs  report.template.html  test_cases.rs
test-renderers/tests/: gltf-render.rs  ray-render.rs  test-luminance.rs  test-raytracer.rs  test-wgpu.rs  ui.rs  wgpu-render.rs
test-renderers/types/: Cargo.toml
tools/xtask/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: fs_ops.rs  xtask.rs
(+555 files in other folders)
