[workspace]
members = [
  "all-is-cubes",
  "all-is-cubes-base",
  "all-is-cubes-content",
  "all-is-cubes-desktop",
  "all-is-cubes-gpu",
  "all-is-cubes-mesh",
  "all-is-cubes-port",
  "all-is-cubes-render",
  "all-is-cubes-server",
  "all-is-cubes-ui",
  "test-renderers",
  "tools/xtask",

  # Workspaces generally expect to be able to compile everything for the same target,
  # but all-is-cubes-wasm only compiles on wasm and all-is-cubes-desktop doesn't.
  # Specific advantages:
  # * The wasm workspace has Cargo config telling it to be built for wasm32-unknown-unknown,
  #   which rust-analyzer picks up, so all IDE assistance works.
  # 
  # Disadvantages, or advantages of the alternative of merely `cfg`-disabling all the wasm-only
  # code:
  # * `cargo fmt`, `cargo tree`, etc. don't work on this code (but `xtask` provides
  #   all-workspaces commands).
  #
  # "all-is-cubes-wasm",
  
  # Including this makes the fuzz targets automatically built so we know they aren't broken.
  # But, `cargo test` sometimes ignores `[[bin]] test = false` directives,
  #     https://github.com/rust-lang/cargo/issues/8338
  # so doing this causes test failures in thise circumstances.
  # As a substitute, I've included explicitly building the fuzz targets in the `xtask` build process.
  # 
  # "fuzz",
]

# Use feature resolver version 2 (latest). (This must be specified explicitly
# in a workspace, but would be implicit in a single package with edition="2021".)
resolver = "2"

[workspace.package]
# When changing any of these values, be sure to also update the non-workspace packages
# as listed above, if applicable.
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Kevin Reid <kpreid@switchb.org>"]
# TODO: add homepage = "..." when we have one
repository = "https://github.com/kpreid/all-is-cubes"

[workspace.dependencies]
all-is-cubes = { path = "all-is-cubes", version = "0.8.0", default-features = false }
all-is-cubes-base = { path = "all-is-cubes-base", version = "0.8.0", default-features = false }
all-is-cubes-content = { path = "all-is-cubes-content", version = "0.8.0", default-features = false }
all-is-cubes-desktop = { path = "all-is-cubes-desktop", version = "0.8.0", default-features = false }
all-is-cubes-gpu = { path = "all-is-cubes-gpu", version = "0.8.0", default-features = false }
all-is-cubes-mesh = { path = "all-is-cubes-mesh", version = "0.8.0", default-features = false }
all-is-cubes-port = { path = "all-is-cubes-port", version = "0.8.0", default-features = false }
all-is-cubes-render = { path = "all-is-cubes-render", version = "0.8.0", default-features = false }
all-is-cubes-server = { path = "all-is-cubes-server", version = "0.8.0", default-features = false }
all-is-cubes-ui = { path = "all-is-cubes-ui", version = "0.8.0", default-features = false }
allocation-counter = "0.8.1"
anyhow = "1.0.70"
# Each use should be { optional = true }.
arbitrary = { version = "1.3.2", features = ["derive"] }
arrayvec = { version = "0.7.4", default-features = false }
async_fn_traits = "0.1.1"
base64 = { version = "0.22.1", default-features = false }
bitflags = { version = "2.6.0", default-features = false }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
bytemuck = { version = "1.17.0", default-features = false, features = ["derive", "must_cast"] }
cfg-if = { version = "1.0.0" }
# When upgrading clap, beware text output changes causing integration tests to fail.
clap = { version = "4.2.4", default-features = false, features = ["cargo", "deprecated", "derive", "help", "std", "suggestions", "usage", "wrap_help"] }
# Note: async_tokio feature is not needed globally but is enabled to avoid compiling two versions
# when benching/testing specific packages
criterion = { version = "0.5.1", features = ["async_tokio", "cargo_bench_support", "html_reports"] }
displaydoc = { version = "0.2.4", default-features = false}
downcast-rs = { version = "1.2.0", default-features = false }
either = { version = "1.10.0", default-features = false }
# embedded-graphics and embedded-graphics-core must match
embedded-graphics = "0.8.0"
embedded-graphics-core = "0.4.0"
euclid = { version = "0.22.10", default-features = false }
exhaust = { version = "0.1.0", default-features = false }
flume = { version = "0.11.0", default-features = false, features = ["async"] }
fnv = "1.0.7"
futures-channel = { version = "0.3.28", default-features = false, features = ["alloc"] }
futures-core = { version = "0.3.28", default-features = false, features = ["alloc"] }
futures-task = { version = "0.3.28", default-features = false }
futures-util = { version = "0.3.28", default-features = false, features = ["alloc"] }
gilrs = { version = "0.10.4" }
gloo-timers = { version = "0.3.0", default-features = false }
half = { version = "2.3.1", features = ["bytemuck"] }
hashbrown = { version = "0.14.0", default-features = false, features = ["ahash", "inline-more"] }
image = { version = "0.25.1", default-features = false }
imgref = "1.10.1"
indoc = "2.0.1"
itertools = { version = "0.13.0", default-features = false, features = ["use_alloc"] }
libm = { version = "0.2.8" }
log = { version = "0.4.17", default-features = false }
macro_rules_attribute = "0.2.0"
manyfmt = "0.1.0"
mutants = "0.0.3"
noise = { version = "0.9.0", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
ordered-float = { version = "4.2.0", default-features = false }
paste = "1.0.15"
petgraph = { version = "0.6.2", default-features = false, features = ["graphmap"] }
png-decoder = "0.1.1" # used by all-is-cubes for no_std-compatible reading pngs
png = "0.17.6" # used by all-is-cubes-desktop for writing pngs
pollster = { version = "0.3.0", default-features = false }
polonius-the-crab = { version = "0.4.1" }
pretty_assertions = "1.2.0"
rand = { version = "0.8.3", default-features = false }
rand_xoshiro = "0.6.0"
rayon = { version = "1.8.0" }
re_log_types = { version = "0.18.0", default-features = false }
re_sdk = { version = "0.18.0", default-features = false }
re_types = { version = "0.18.0", default-features = false }
rectangle-pack = "0.4.2"
rendiff = { version = "0.2.0" }
scopeguard = { version = "1.2.0", default-features = false }
send_wrapper = { version = "0.6.0", features = ["futures"] }
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
serde_json = "1.0.79"
simplelog = { version = "0.12.0", default-features = false, features = ["local-offset"] }
snapbox = "0.6.10" # keep in sync with `trycmd`
strum = { version = "0.26.1", default-features = false, features = ["derive"] }
sync_wrapper = { version = "1.0.0", default-features = false }
tempfile = "3.3.0"
thiserror = "1.0.62"
time = { version = "0.3.36", default-features = false }
# Tokio is used for async test-running and for certain binaries.
# The library crates do not require Tokio.
tokio = { version = "1.28.0", default-features = false }
trycmd = "0.15.4" # keep in sync with `snapbox`
unicode-segmentation = { version = "1.10.1", default-features = false }
unicode-width = { version = "0.1.13", default-features = false }
wasm-bindgen-futures = "0.4.42"
web-time = "1.0.0"
wgpu = { version = "22.1.0", default-features = false, features = ["wgsl"] }
yield-progress = { version = "0.1.6", default-features = false }

# Note: Lints are also necessarily redefined in the workspaces other than this one.
[workspace.lints.rust]
# rustc lints that are set to deny
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"

# rustc lints that are set to warn
explicit_outlives_requirements = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
noop_method_call = "warn"
redundant_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unnameable_types = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
# This lint has false positives on dev-dependencies. Occasionally turn it on to audit non-dev deps.
# unused_crate_dependencies = "warn"

[workspace.lints.clippy]
# clippy default lints that are set to allow
collapsible_else_if = "allow"
collapsible_if = "allow"
match_ref_pats = "allow"
needless_update = "allow"
single_match = "allow"

# clippy::pedantic lints that are set to allow
cast_possible_truncation = "allow" # we would need an alternative for intentional from-float saturation and to-float precision loss
cast_precision_loss = "allow" # consider enabling
cast_sign_loss = "allow" # consider enabling
default_trait_access = "allow"
empty_enum = "allow"
enum_glob_use = "allow"
explicit_iter_loop = "allow" # I prefer the opposite style
float_cmp = "allow"
from_iter_instead_of_collect = "allow" # <https://github.com/rust-lang/rust-clippy/issues/7213>
if_not_else = "allow"
inline_always = "allow"
items_after_statements = "allow" # we use this sparingly
manual_assert = "allow"
many_single_char_names = "allow"
match_bool = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow" # consider enabling
missing_panics_doc = "allow" # consider enabling
module_name_repetitions = "allow" # would use except for <https://github.com/rust-lang/rust-clippy/issues/8524>
must_use_candidate = "allow" # consider enabling
no_effect_underscore_binding = "allow"
range_plus_one = "allow" # https://github.com/rust-lang/rust-clippy/issues/3307
redundant_closure_for_method_calls = "allow" # consider enabling
redundant_else = "allow"
semicolon_if_nothing_returned = "allow"
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
unreadable_literal = "allow"
wildcard_imports = "allow" # we use this sparingly

# clippy::restriction lints that are set to allow (to note why we aren't using them)
shadow_unrelated = "allow" # would use except for <https://github.com/rust-lang/rust-clippy/issues/10780>

# clippy lints that are set to deny
should_panic_without_expect = "deny"

# clippy lints that are set to warn
pedantic = { level = "warn", priority = -1 }
assigning_clones = "warn"
cast_lossless = "warn"
cast_possible_wrap = "warn"
doc_markdown = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
into_iter_without_iter = "warn"
inconsistent_struct_constructor = "warn"
infinite_loop = "warn"
iter_without_into_iter = "warn"
large_futures = "warn"
large_stack_frames = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
missing_fields_in_debug = "warn"
modulo_arithmetic = "warn"
needless_pass_by_value = "warn"
option_as_ref_cloned = "warn"
pub_without_shorthand = "warn"
return_self_not_must_use = "warn"
suboptimal_flops = "warn"
trivially_copy_pass_by_ref = "warn"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unnecessary_self_imports = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"
wrong_self_convention = "warn"

[profile.dev]
# Enable some optimization to improve interactive performance in manual testing/experimenting.
# In particular, inlining is crucial.
opt-level = 2
# Yes, this is the default for dev, but I want to be precise here: overflow checks are enabled
# for ALL profiles. (Because not catching overflows in release mode is unwise when this is
# precisely where the program is *likely to encounter bigger numbers than in testing*.)
overflow-checks = true
# Faster builds at the cost of pathname-sensitive debug info.
# TODO: Disabled for <https://github.com/rust-lang/rust/issues/103976> in CI
# split-debuginfo = "unpacked"

# For packages whose code is not as performance-critical, spend less time optimizing
package.all-is-cubes-content.opt-level = 1
package.all-is-cubes-port.opt-level = 1
package.all-is-cubes-server.opt-level = 1
package.all-is-cubes-ui.opt-level = 1
package.test-renderers.opt-level = 1

[profile.release]
# TODO: review recommended options for wasm releases
overflow-checks = true

[profile.test]
overflow-checks = true

[profile.bench]
overflow-checks = true

[patch.crates-io]
# Here are some patches we might want to apply for development:
#
# wgpu = { git = "https://github.com/gfx-rs/wgpu/", branch = "trunk" }
